# DeskPal

./: .gitignore  README.md  config.yaml  export_frames.py  index.html  package-lock.json  package.json  vite.config.js
src/: Pet.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
